tdf#153444: map iso-8859-* encoding range

Change-Id: I6eed711e788955f17c7b8a40db77370e0dc57213
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147033
Tested-by: Jenkins
Reviewed-by: Kohei Yoshida <kohei@libreoffice.org>